# AOIS

lab1/: main.py  pyproject.toml
lab1/sources/: AdvancedArithmeticOperations.py  BCD2421.py  BasicArithmeticOperations.py  BasicFunctions.py  BinaryConverter.py  IEEE754.py  Verification.py
lab1/tests/: AdvancedArithmeticOperationsTest.py  BCD2421Test.py  BasicArithmeticOperationsTest.py  BasicFunctionsTest.py  BinaryConverterTest.py  IEEE754Test.py  VerificationTest.py
lab2/: .coverage  .gitignore  main.py  pyproject.toml
lab2/sources/: BasicMethods.py  ExpressionParser.py  LogicalFunctions.py
lab2/sources/minimization/: BaseMinimizer.py  CalculatedMinimizer.py  KarnaughMinimizer.py  TableMinimizer.py
lab2/tests/: BaseMinimizerTest.py  BasicMethodsTest.py  CalculatedMinimizerTest.py  ExpressionParserTest.py  KarnaughMinimizerTest.py  LogicalFunctionsTest.py  TableMinimizerTest.py
lab3/: .gitignore  BaseMinimizer.py  Minimizer.py  TaskRunner.py  main.py  tests.py
lab3/logisim/: Counter_8_states.circ  ODS_3.circ  Сonverter_8421_n_1.circ
lab4/: HashData.py  HashTable.py  HashTableTest.py  main.py
